--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@iconify/json": "^1.1.288",
-    "@prefresh/vite": "^2.0.0",
+    "@prefresh/vite": "^2.0.1",
     "@tailwindcss/typography": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
@@ -32,7 +32,7 @@
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
-    "vite": "2.0.0-beta.31",
+    "vite": "^2.0.0-beta.31",
     "vite-plugin-pwa": "^0.3.9"
   },
   "husky": {
