--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
     "build": "cross-env NODE_ENV=production vite build"
   },
   "dependencies": {
-    "preact": "^10.5.10",
+    "preact": "^10.5.14",
     "preact-router": "^3.2.1"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.288",
-    "@prefresh/vite": "^2.0.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "autoprefixer": "^10.2.1",
+    "@iconify/json": "^1.1.394",
+    "@prefresh/vite": "^2.2.3",
+    "@tailwindcss/typography": "^0.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "autoprefixer": "^10.3.3",
     "cross-env": "^7.0.3",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^7.4.1",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "postcss": "^8.2.4",
-    "postcss-nested": "^5.0.3",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.31",
-    "vite-plugin-pwa": "^0.3.9"
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.17.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "postcss": "^8.3.6",
+    "postcss-nested": "^5.0.6",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.8",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.1",
+    "vite-plugin-pwa": "^0.11.2"
   },
   "husky": {
     "hooks": {
