--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "devDependencies": {
     "@iconify/json": "^1.1.394",
     "@prefresh/vite": "^2.2.3",
-    "@tailwindcss/typography": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "autoprefixer": "^10.3.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -28,13 +26,12 @@
     "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "postcss": "^8.3.6",
-    "postcss-nested": "^5.0.6",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.8",
     "typescript": "^4.4.2",
     "vite": "^2.5.1",
-    "vite-plugin-pwa": "^0.11.2"
+    "vite-plugin-pwa": "^0.11.2",
+    "vite-plugin-windicss": "^1.3.0",
+    "windicss": "^3.1.7"
   },
   "husky": {
     "hooks": {
